--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <meta name="mobile-web-app-capable" content="yes">
     <title>Test</title>
+    <link rel="stylesheet" href="css/style.css" />
+    <!-- polymer -->
     <script src="lib/platform/platform.js"></script>
     <link rel="import" href="lib/core-scaffold/core-scaffold.html">
-    <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body unresolved>
